# cdd

./: .gitignore  .goreleaser.yaml  Cargo.toml  Makefile  README.md  hello.txt
.github/workflows/: release.yml
fixtures/commonjs-build/: index.js  serviceA.js  serviceB.js  utils.js
fixtures/config-test-a/: test.ts
fixtures/config-test-b/: test.ts
fixtures/example-monorepo/: README.md  package-lock.json  package.json  tsconfig.base.json
fixtures/workspace-complex/: package.json
fixtures/workspace-monorepo/: package.json
scripts/: bump-version.sh  release.sh
src/: cli.rs  config.rs  filesystem.rs  graph.rs  main.rs  output.rs  parser.rs  tsconfig.rs  utils.rs  watch.rs  workspace.rs
tests/: integration_tests.rs
